Kubernetes Ingress, ConfigMaps & Secrets/ingress-hybrid.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coursework-hybrid-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: portal.coursework.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
    - host: api.coursework.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: backend-service
                port:
                  number: 80
